Working on formatting error messages.

--- a/src/main/webapp/partials/createUser.ng.html
+++ b/src/main/webapp/partials/createUser.ng.html
@@ -5,6 +5,18 @@
     <br>
 
     <div class="row">
+        <div class="col-md-5 col-md-offset-4 align-right">
+            <div class="alert alert-info">
+                <strong>Alert</strong>
+                <ul>
+                    <li data-ng-repeat="x in errors">
+
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-12 align-center">
             <ul>
                 <small style="color: #b94a48" data-ng-repeat="x in errors">
