--- a/src/main/webapp/partials/createUser.ng.html
+++ b/src/main/webapp/partials/createUser.ng.html
@@ -394,8 +394,7 @@
         <div class="row">
             <div class="col-md-1 col-md-offset-9">
                 <input type="submit" class="btn btn-primary" ng-disabled="userForm.$invalid"
-                       ng-click="submit(userForm.$valid)"
-                       value="Submit">
+                       ng-click="submit(userForm.$valid)" value="Submit">
 
                 <input type="testing" class="btn btn-primary" ng-click="createUserTest()"
                        value="testing">
