--- a/src/main/webapp/css/general.css
+++ b/src/main/webapp/css/general.css
@@ -7,3 +7,11 @@
 .align-center{
 	text-align: center;
 }
+
+.border-radius-main-form {
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	border: 1px solid #bbb;
+	padding: 10px 20px;
+}
