--- a/src/main/webapp/partials/familySearch.ng.html
+++ b/src/main/webapp/partials/familySearch.ng.html
@@ -12,6 +12,8 @@
         <div class="col-md-4 align-left"><a ui-sref=".byLocation" class="btn btn-primary btn-sm">By location</a></div>
     </div>
 
-    <div ui-view></div>
+    <div ui-view>
+
+    </div>
 
 </div>
