--- a/src/main/webapp/partials/familySearch.byUser.ng.html
+++ b/src/main/webapp/partials/familySearch.byUser.ng.html
@@ -3,16 +3,20 @@
         <div class="col-md-2 col-md-offset-1 align-right">Name:</div>
 
         <div class="col-md-2">
-            <input type="text" ng-model="searchRequest.firstName" name="firstName"
+            <input type="text" ng-model="personSearchCriteria.firstName" name="firstName"
                    class="form-control" required-any="nameSearch">
         </div>
 
         <div class="col-md-2">
-            <input type="text" ng-model="searchRequest.middleName" name="middleName"
+            <input type="text" ng-model="personSearchCriteria.middleName" name="middleName"
                    class="form-control" required-any="nameSearch">
         </div>
         <div class="col-md-2">
-            <input type="text" ng-model="searchRequest.lastName" name="lastName"
+            <input type="text" ng-model="personSearchCriteria.lastName" name="lastName"
+                   class="form-control" required-any="nameSearch">
+        </div>
+        <div class="col-md-3">
+            <input type="text" ng-model="personSearchCriteria.userName" name="userName"
                    class="form-control" required-any="nameSearch">
         </div>
 
