--- a/src/main/webapp/partials/familySearch.byUser.ng.html
+++ b/src/main/webapp/partials/familySearch.byUser.ng.html
@@ -70,7 +70,7 @@
     </div>
     <div class="col-md-4">
         <div>&nbsp;</div>
-    </div>>
+    </div>
 
     <div class="col-md-4">
         <div class="col-md-offset-10">
