--- a/src/main/webapp/partials/userCreated.ng.html
+++ b/src/main/webapp/partials/userCreated.ng.html
@@ -1,5 +1,13 @@
 <div style="height: 300px; width: 100%">
     <div class="col-md-12 align-center">
-            <h>Thanks for signing up, {{userProfileUIObject.person.firstName}}</h>
+            <h>
+                Thanks for signing up, {{userProfileUIObject.person.firstName}}!
+                <br>
+                Check your email to activate your account!
+            </h>
     </div>
+</div>
+
+<div class="col-md-12">
+
 </div>
